--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource/roboto-mono": "^4.5.10",
-    "astro": "^2.3.2"
+    "astro": "^2.3.2",
+    "astro-icon": "^0.8.1"
   }
 }
