--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@fontsource/roboto-mono": "^5.0.19",
+    "@iconify-json/lucide": "^1.1.207",
     "astro": "^3.6.4",
-    "astro-icon": "^0.8.1"
+    "astro-icon": "^1.1.1"
   }
 }
